[gd_scene load_steps=17 format=3 uid="uid://di3dyh85gmqir"]

[ext_resource type="PackedScene" uid="uid://bup4eykg0pm6e" path="res://src/assets/A3/CombinationLock Wheel.glb" id="1_hg08l"]
[ext_resource type="Script" path="res://src/assets/A3/CombinationLockWheel.gd" id="2_ohcus"]
[ext_resource type="Script" path="res://addons/godot-xr-tools/objects/interactable_area.gd" id="3_bcldx"]

[sub_resource type="Animation" id="Animation_ry8oh"]
resource_name = "0_to_1"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("1st wheel:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1.5708, 0, -1.5708), Vector3(0.942478, 0, -1.5708)]
}

[sub_resource type="Animation" id="Animation_3gvg7"]
resource_name = "1_to_2"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("1st wheel:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.942478, 0, -1.5708), Vector3(0.314159, 0, -1.5708)]
}

[sub_resource type="Animation" id="Animation_cxbak"]
resource_name = "2_to_3"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("1st wheel:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.314159, 0, -1.5708), Vector3(-0.314159, 0, -1.5708)]
}

[sub_resource type="Animation" id="Animation_7o8ej"]
resource_name = "3_to_4"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("1st wheel:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.314159, 0, -1.5708), Vector3(-0.942478, 0, -1.5708)]
}

[sub_resource type="Animation" id="Animation_opmqn"]
resource_name = "4_to_5"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("1st wheel:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.942478, 0, -1.5708), Vector3(-1.5708, 0, -1.5708)]
}

[sub_resource type="Animation" id="Animation_2ms3b"]
resource_name = "5_to_6"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("1st wheel:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-1.5708, 0, -1.5708), Vector3(-2.19911, 0, -1.5708)]
}

[sub_resource type="Animation" id="Animation_evfh1"]
resource_name = "6_to_7"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("1st wheel:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-2.19911, 0, -1.5708), Vector3(-2.82743, 0, -1.5708)]
}

[sub_resource type="Animation" id="Animation_j7i4g"]
resource_name = "7_to_8"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("1st wheel:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-2.82743, 0, -1.5708), Vector3(-3.45575, 0, -1.5708)]
}

[sub_resource type="Animation" id="Animation_057bh"]
resource_name = "8_to_9"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("1st wheel:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-3.45575, 0, -1.5708), Vector3(-4.08407, 0, -1.5708)]
}

[sub_resource type="Animation" id="Animation_pt5s8"]
resource_name = "9_to_0"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("1st wheel:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-4.08407, 0, -1.5708), Vector3(-4.71239, 0, -1.5708)]
}

[sub_resource type="Animation" id="Animation_uflt3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("1st wheel:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.5708, 0, -1.5708)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7k3gg"]
_data = {
"0_to_1": SubResource("Animation_ry8oh"),
"1_to_2": SubResource("Animation_3gvg7"),
"2_to_3": SubResource("Animation_cxbak"),
"3_to_4": SubResource("Animation_7o8ej"),
"4_to_5": SubResource("Animation_opmqn"),
"5_to_6": SubResource("Animation_2ms3b"),
"6_to_7": SubResource("Animation_evfh1"),
"7_to_8": SubResource("Animation_j7i4g"),
"8_to_9": SubResource("Animation_057bh"),
"9_to_0": SubResource("Animation_pt5s8"),
"RESET": SubResource("Animation_uflt3")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_xym0y"]
size = Vector3(0.6, 1.5, 3)

[node name="CombinationLock Wheel" instance=ExtResource("1_hg08l")]
script = ExtResource("2_ohcus")

[node name="1st wheel" parent="." index="0"]
transform = Transform3D(-5.23679e-06, 0.289309, 0, 5.23679e-06, 3.7912e-12, -1.44663, -1.44663, -1.0473e-06, -5.23679e-06, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]
libraries = {
"": SubResource("AnimationLibrary_7k3gg")
}

[node name="MoveUp" type="Area3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.75, 0)
collision_layer = 5242881
script = ExtResource("3_bcldx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="MoveUp" index="0"]
shape = SubResource("BoxShape3D_xym0y")

[node name="MoveDown" type="Area3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
collision_layer = 5242881
script = ExtResource("3_bcldx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="MoveDown" index="0"]
shape = SubResource("BoxShape3D_xym0y")

[connection signal="pointer_event" from="MoveUp" to="." method="_on_move_up_pointer_event"]
[connection signal="pointer_event" from="MoveDown" to="." method="_on_move_down_pointer_event"]
